# degauss

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: cicd.yml  release.yml
src/: compat.rs  errors.rs  lib.rs  main.rs  schema.rs  status.rs  table.rs
src/schema_registry/: client.rs  mod.rs  response_ext.rs  serde_ext.rs  types.rs
tests/: backward_compat_tests.rs  backward_transitive_compat_tests.rs  compat_tests.rs  forward_compat_tests.rs  forward_transitive_compat_tests.rs  full_compat_tests.rs  full_transitive_compat_tests.rs
tests/data/: movies-raw-reader.avsc  movies-raw-writer.avsc  schema1.avsc  schema2.avsc  schema3.avsc  schema6.avsc  schema7.avsc  schema8.avsc
