[package]
name = "degauss"
version = "0.1.2"
edition = "2021"
authors = [
    "Theo B. <vertexclique@gmail.com>",
    "Ankur S. <asrivas.cs@gmail.com>"
]
keywords = ["schema-compatibility", "compatibility", "serialization"]
categories = ["development-tools", "command-line-utilities"]
homepage = "https://github.com/vertexclique/degauss"
repository = "https://github.com/vertexclique/degauss"
documentation = "https://docs.rs/degauss"
readme = "README.md"
license = "Apache-2.0/MIT"
description = "Your friendly neighborhood Avro schema compatibility checker."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
avro-rs = "0.13"
structopt = { version = "0.3", features = [ "paw" ] }
paw = "1.0"
strum_macros = "0.22.0"
strum = { version = "0.22", features = ["derive"] }
comfy-table = "4.1.1"
