[package]
authors = [
  "Theo B. <vertexclique@gmail.com>",
  "Ankur S. <asrivas.cs@gmail.com>",
]
categories = ["development-tools", "command-line-utilities"]
description = "Your friendly neighborhood Avro schema compatibility checker."
documentation = "https://docs.rs/degauss"
edition = "2021"
homepage = "https://github.com/vertexclique/degauss"
keywords = ["schema-compatibility", "compatibility", "serialization"]
license = "Apache-2.0/MIT"
name = "degauss"
readme = "README.md"
repository = "https://github.com/vertexclique/degauss"
version = "0.1.7"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = "0.14.0"
comfy-table = "6.1.0"
isahc = { version = "1.7", features = ["json", "static-ssl"] }
paw = "1.0"
serde_json = "1.0"
structopt = { version = "0.3", features = ["paw"] }
strum = { version = "0.23", features = ["derive"] }
strum_macros = "0.24.0"
thiserror = "1.0"

[dependencies.serde]
features = ["derive"]
version = "1.0"

[dev-dependencies]
rand = "0.8"
